syntax = "proto3";

package user.v1;

service UserService {
  rpc GetUserContext (GetUserContextRequest) returns (GetUserContextResponse);
  rpc AssignRole (AssignRoleRequest) returns (AssignRoleResponse);
  rpc RevokeRole (RevokeRoleRequest) returns (RevokeRoleResponse);
  rpc ListRoles (ListRolesRequest) returns (ListRolesResponse);
  rpc EnsureCustomerProfile (EnsureCustomerProfileRequest) returns (EnsureCustomerProfileResponse);
  rpc RegisterGuest (RegisterGuestRequest) returns (RegisterGuestResponse);
  rpc GetCustomerProfile (GetCustomerProfileRequest) returns (GetCustomerProfileResponse);
}

message Permission {
  string id = 1;
  string resource = 2;
  string action = 3;
  string description = 4;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated Permission permissions = 4;
}

message UserRoleAssignment {
  string assignment_id = 1;
  string user_id = 2;
  Role role = 3;
  string scope = 4;
  string granted_by = 5;
  bool active = 6;
}

message GetUserContextRequest {
  string user_id = 1;
}

message GetUserContextResponse {
  string user_id = 1;
  repeated Role roles = 2;
  repeated Permission permissions = 3;
  repeated UserRoleAssignment assignments = 4;
}

message AssignRoleRequest {
  string user_id = 1;
  string role_id = 2;
  string scope = 3;
  string granted_by = 4;
}

message AssignRoleResponse {
  bool success = 1;
  UserRoleAssignment assignment = 2;
}

message RevokeRoleRequest {
  string assignment_id = 1;
  string revoked_by = 2;
}

message RevokeRoleResponse {
  bool success = 1;
}

message ListRolesRequest {}

message ListRolesResponse {
  repeated Role roles = 1;
}

enum GuestProfileStatus {
  GUEST_PROFILE_STATUS_UNSPECIFIED = 0;
  GUEST_PROFILE_STATUS_ACTIVE = 1;
  GUEST_PROFILE_STATUS_MIGRATED = 2;
}

message DeviceInfo {
  string os = 1;
  string os_version = 2;
  string model = 3;
  string app_version = 4;
  string network = 5;
  string fcm_token = 6;
  string permissions_json = 7;
  string device_name = 8;
}

message EnsureCustomerProfileRequest {
  string firebase_uid = 1;
  string phone_number = 2;
  string device_id = 3;
  string guest_id = 4;
  DeviceInfo device_info = 5;
}

message EnsureCustomerProfileResponse {
  string customer_id = 1;
  string device_identity_id = 2;
  bool guest_migrated = 3;
  string guest_profile_id = 4;
}

message RegisterGuestRequest {
  string guest_id = 1;
  string device_id = 2;
  DeviceInfo device_info = 3;
}

message RegisterGuestResponse {
  string guest_profile_id = 1;
  string device_identity_id = 2;
  GuestProfileStatus status = 3;
  string customer_id = 4;
}

message GetCustomerProfileRequest {
  string customer_id = 1;
}

message GetCustomerProfileResponse {
  string customer_id = 1;
  string name = 2;
  string email = 3;
  string phone_number = 4;
  string status = 5;
  string avatar_url = 6;
}
